# dj-template-style

./: .gitignore  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  uv_commands.txt
person/: forms.py  models.py  views.py
person/migrations/: 0001_initial.py  0002_remove_address_number.py  0003_alter_person_photo.py
project/: settings.py  urls.py  views.py
staticfiles/css/: style.css  tailwind.css
templates/: base.html  base_1.html  calendar.html  canvas.html  home.html  person_create.html  person_list.html  profile.html
templates/snippets/: navbar.html  sidebar.html
