[project]
name = "dj-template-style"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4.0",
    "django>=5.1.4",
    "django-celery-beat>=2.7.0",
    "django-debug-toolbar>=4.4.6",
    "pillow>=11.0.0",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
]
